k8s/homepage.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: seasalt
  name: homepage
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      imagePullSecrets:
      - name: harbor-pull-secret
      containers:
      - name: backstage
        image: harbor.seasalt.ai/frontend/ngchat:0.0.1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 1024Mi
          limits:
            cpu: 250m
            memory: 1024Mi
        ports:
        - containerPort: 5000
