k8s/homepage.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: seasalt
  name: homepage
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: homepage
